--- a/experiments/basic/Makefile
+++ b/experiments/basic/Makefile
@@ -9,11 +9,6 @@ SRC_FILES := basic.sv
 include $(REPO_ROOT)/utils/make/yosys.mk
 include $(REPO_ROOT)/utils/make/dot.mk
 
-directories:
-	@echo "Creating directories"
-	@mkdir -p $(OBJ_DIR)
-	@mkdir -p $(OUT_DIR)
-
 $(OUT_DIR)/$(PROJECT_NAME).png: $(OBJ_DIR)/$(PROJECT_NAME).gates.png
 	@echo "Copying to $(notdir $@)"
 	@cp $< $@
@@ -21,6 +16,14 @@ $(OUT_DIR)/$(PROJECT_NAME).png: $(OBJ_DIR)/$(PROJECT_NAME).gates.png
 $(OUT_DIR)/$(PROJECT_NAME).json: $(OBJ_DIR)/$(PROJECT_NAME).gates.json
 	@echo "Copying to $(notdir $@)"
 	@cp $< $@
+
+$(OBJ_DIR):
+	@mkdir -p $@
+
+$(OUT_DIR):
+	@mkdir -p $@
+
+directories: $(OBJ_DIR) $(OUT_DIR)
 
 all: directories $(OUT_DIR)/$(PROJECT_NAME).png $(OUT_DIR)/$(PROJECT_NAME).json
 
