Removed control module and merged into FSM

--- a/core/Makefile
+++ b/core/Makefile
@@ -18,8 +18,7 @@ VERILOG_SRC_FILES := \
 	verilog/adder32.sv \
 	verilog/adder32_sync.sv \
 	verilog/csr.sv \
-	verilog/fsm.sv \
-	verilog/control.sv
+	verilog/fsm.sv
 SIM_SRC_FILES := \
 	sim/sim_main.cpp \
 	sim/mem.cpp
